added python test workflow

--- a/valhalla.yml
+++ b/valhalla.yml
@@ -1,7 +1,9 @@
 git_host: gitlab
 project_name: valhalla
-before_commit:
-  - echo "test"
-  - echo "test2"
-  - ls -l
-  - echo "Good job!" & ps
+commit:
+  enabled: True
+  before:
+    - echo "test"
+    - echo "test2"
+    - ls -l
+    - echo "Good job!" & ps
