--- a/valhalla-extends.yml
+++ b/valhalla-extends.yml
@@ -1,6 +1,12 @@
+# example of inheritance of valhalla.yml
 commit_before_release:
   msg: ABC Releasing version {VERSION}
+  # watch out extending lists, because currently it will be merged together
+  # (first elements from extended, then from proper valhalla.yml)
+  # (maybe in future it will be overridden!)
   before:
+    - mkdir -p changelog/v{VERSION}
     - echo "ABC Super release description for tests" > changelog/v{VERSION}/version_summary.md
 merge_request:
   title: ABC Releasing version {VERSION} and preparation for next development cycle
+  description: some super best mr description, that wont be overridden!
