--- a/valhalla.yml
+++ b/valhalla.yml
@@ -3,6 +3,9 @@
 # More info about configuration you can find https://github.com/logchange/valhalla#%EF%B8%8F-configuration ⬅️
 extends:
   - https://raw.githubusercontent.com/logchange/valhalla/master/valhalla-extends.yml
+variables:
+  MY_VARIABLE: Some value
+  PARENT_VARIABLE_OVERRIDE: new value from child yml! It works!
 git_host: gitlab
 commit_before_release:
   enabled: True
@@ -12,7 +15,7 @@ commit_before_release:
   before:
     - echo "test" > some_file4.md
     - mkdir -p changelog/v{VERSION}
-    - echo "Super release description for tests" > changelog/v{VERSION}/version_summary.md
+    - echo "Super release description for tests {MY_VARIABLE}" > changelog/v{VERSION}/version_summary.md
 release:
   description:
     from_command: "cat changelog/v{VERSION}/version_summary.md"
