--- a/examples/valhalla-gitlab-maven-logchange.yml
+++ b/examples/valhalla-gitlab-maven-logchange.yml
@@ -19,6 +19,7 @@ commit_before_release:
     - mvn dev.logchange:logchange-maven-plugin:release --non-recursive
 
 release:
+  name: "Release name {VERSION}"
   description:
     from_command: "cat changelog/v{VERSION}/version-summary.md"
   assets:
@@ -30,6 +31,8 @@ release:
         url: https://registry.my/#browse/browse:docker:v2%2F{DOCKER_IMAGE_NAME}%2Ftags%2F{VERSION}
         link_type: image
 
+tag:
+  name: "Tag name {VERSION}"
 
 commit_after_release:
   enabled: True
