--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-PyYAML~=6.0.1
-GitPython~=3.1.40
-python-gitlab~=4.5.0
-requests~=2.32.2
+PyYAML==6.0.3
+GitPython==3.1.45
+python-gitlab==6.4.0
+requests==2.32.5
