--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,4 +23,9 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Run tests
-      run: python -m unittest discover -s test -t test -p '*_test.py'
+      run: pytest --cov --cov-branch --cov-report=xml
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
