--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,7 +23,7 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Run tests
-      run: pytest --cov --cov-branch --cov-report=xml
+      run: pytest --cov=valhalla --cov-branch --cov-report=xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
