--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -33,6 +33,13 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+      - name: run structure tests
+        uses: plexsystems/container-structure-test-action@v0.3.0
+        if: github.ref == 'refs/heads/main' # test only on main
+        with:
+          image: logchange/logchange:edge
+          config: docker-test.yml
+
       - name: Docker Hub Description
         uses: peter-evans/dockerhub-description@v5
         with:
