--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
+    - name: Install pytest-cov
+      run: pip install pytest-cov
+
     - name: Run tests
       run: pytest --cov=valhalla --cov-branch --cov-report=xml
 
