--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -33,4 +33,4 @@ jobs:
       uses: brpaz/structure-tests-action@1.3.0
       with:
         image: ${{ env.TEST_IMAGE_TAG }}
-        configFile: docker-test.yaml
+        configFile: docker-test.yml
