update tests and help message: adjust expected output in Docker test and improve formatting in help text

--- a/docker-test.yml
+++ b/docker-test.yml
@@ -4,4 +4,4 @@ commandTests:
   - name:  "valhalla installed"
     command: "valhalla"
     args: ["--help"]
-    excludedOutput: ["valhalla is a toolkit designed to streamline the release of new versions of software"]
+    expectedOutput: [".*valhalla is a toolkit designed to streamline the release of new versions of software.*"]
