--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron: "0 7 * * *"
 
+permissions:
+  contents: read
+
 jobs:
   renovate:
     runs-on: ubuntu-latest
@@ -20,5 +23,3 @@ jobs:
         env:
           RENOVATE_ALLOWED_POST_UPGRADE_COMMANDS: ".*"
           LOG_LEVEL: debug
-
-
