--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,11 +3,11 @@ name: Publish Docker image
 on:
   push:
     branches:
-      - main
+      - master
     tags:
       - '*'
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 permissions:
   contents: read
