update Dockerfile and docker-test workflow to refine image description handling and streamline metadata configuration

--- a/docker-test.yml
+++ b/docker-test.yml
@@ -9,7 +9,7 @@ metadataTest:
     - key: 'org.opencontainers.image.title'
       value: 'valhalla'
     - key: 'org.opencontainers.image.description'
-      value: 'A toolkit designed to streamline the release of new versions of software'
+      value: '🌌 valhalla is a toolkit designed to streamline the release of new versions of software. 🌌'
     - key: 'org.opencontainers.image.version'
       value: '.+' # any non-empty string (version)
       isRegex: true
